julios site template

--- a/index.html
+++ b/index.html
@@ -1,1 +1,131 @@
-Hello World
+<!DOCTYPE html>
+<html>
+<head>
+  <!-- <script src="jquery-1.11.3.min.js"> </script> -->
+  <!-- will need this whenever I host online for faster loading probs -->
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+  <script src="script.js"> </script>
+  <title>Julio Correa</title>
+  <link rel="stylesheet" href="style.css">
+  <!-- <link href="/normalize.css" rel="stylesheet"> -->
+  <script src="prefixfree.min.js"></script>
+  <meta name="viewport" content="width=device-width, initial-scale=1"/>
+  <meta name="description" content="Computer Science and Digital Arts & Media student at the University of Texas at Austin"/>
+</head>
+
+<body>
+  <header>
+    <h1>Julio Correa </h1> <a href="#about">About</a>
+  </header>
+  <!-- <sup>1</sup> -->
+   <section id="work">
+
+
+    <figure class="thumbnail">
+      <a href="pikkl/index.html">
+        <img src="images/pikkl.png" width="200" height="200">
+
+      <figcaption>
+        <h3> Pikkl </h3>
+      </a>
+
+        <p>iOS / Design</p>
+      </figcaption>
+    </figure>
+
+    <figure class="thumbnail">
+      <a href="pomo/index.html">
+        <img src="images/pomo.png" width="200" height="200">
+
+      <figcaption>
+        <h3> Pomobox </h3>
+              </a>
+
+        <p>Arduino / Design </p>
+      </figcaption>
+    </figure>
+
+    <figure class="thumbnail">
+      <a href="clutch/index.html">
+        <img src="images/clutch.png" width="200" height="200">
+      <figcaption>
+        <h3> Clutch </h3>
+        </a>
+        <p>iOS / Design</p>
+      </figcaption>
+
+    </figure>
+
+    <figure class="thumbnail">
+      <a href="vox/index.html">
+        <img src="images/vox.png" width="200" height="200">
+      <figcaption>
+        <h3> Vox Study </h3>
+         </a>
+        <p>Design Research / UX</p>
+      </figcaption>
+
+    </figure>
+
+    <figure class="thumbnail">
+      <a href="corky/index.html">
+        <img src="images/corky.png" width="200" height="200">
+      <figcaption>
+        <h3> Portable Corkscrew </h3>
+          </a>
+        <p>Industrial Design</p>
+      </figcaption>
+
+    </figure>
+
+    <figure class="thumbnail">
+      <a href="sc/index.html">
+        <img src="images/sc.png" width="200" height="200">
+      <figcaption>
+        <h3> Visual Music Player </h3>
+         </a>
+        <p>Web / Design</p>
+      </figcaption>
+
+    </figure>
+    <!--
+      <figure class="thumbnail">
+      <a href="sc/index.html">
+        <img src="images/sc.png" width="200" height="200">
+      <figcaption>
+        <h3> Visual Music Player </h3>
+        Web / Design
+      </figcaption>
+       </a>
+    </figure>
+  -->
+
+    </section>
+
+
+
+  <section id="about">
+    <hr>
+    <img src="images/jc.jpg" width="200" height="200">
+    <div id="bio">
+    I study <a href="https://www.utexas.edu/finearts/aah/academic/design/undergraduate/overview"> Design (BFA) </a> and <a href="http://www.cs.utexas.edu/undergraduate-program/about-us" > Computer Science (BSA) </a> at the University of Texas at Austin. I am interested in human-computer interaction. I play guitar in <a href="https://www.facebook.com/MicrophonicMusic/?fref=ts">Microphonic </a> and <a href="https://www.facebook.com/remotecontrolcat/?fref=ts"> R.C. Cat</a>. I work on my own music under the pseudonym <a href="http://www.julio.correa.me/sc">Secret Crane</a>.
+    <br>
+    <br>
+    <b>email:<b> <a href="mailto:julio.samuel.correa@gmail.com" target="_top">julio.samuel.correa@gmail.com</a>
+    <br>
+    <a href="Julio_Correa_Resume.pdf">resume</a>
+  </div>
+
+  </section>
+
+
+  <footer>
+    Designed & Built using Sketch, HTML5, CSS3, and jQuery.
+    <br>
+      &copy; 2016 by Julio Correa
+  </footer>
+</body>
+
+
+
+</html>
