--- a/index.html
+++ b/index.html
@@ -5,17 +5,17 @@
   <!-- will need this whenever I host online for faster loading probs -->
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
   <script src="script.js"> </script>
-  <title>Julio Correa</title>
+  <title>Alex Kuan Cheng</title>
   <link rel="stylesheet" href="style.css">
   <!-- <link href="/normalize.css" rel="stylesheet"> -->
   <script src="prefixfree.min.js"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <meta name="description" content="Computer Science and Digital Arts & Media student at the University of Texas at Austin"/>
+  <meta name="description" content="Computer Science, Business Honors Program, and Marketing student at the University of Texas at Austin"/>
 </head>
 
 <body>
   <header>
-    <h1>Julio Correa </h1> <a href="#about">About</a>
+    <h1>Alex Kuan Cheng</h1> <a href="#about">About</a>
   </header>
   <!-- <sup>1</sup> -->
    <section id="work">
@@ -111,7 +111,7 @@
     I study <a href="https://www.utexas.edu/finearts/aah/academic/design/undergraduate/overview"> Design (BFA) </a> and <a href="http://www.cs.utexas.edu/undergraduate-program/about-us" > Computer Science (BSA) </a> at the University of Texas at Austin. I am interested in human-computer interaction. I play guitar in <a href="https://www.facebook.com/MicrophonicMusic/?fref=ts">Microphonic </a> and <a href="https://www.facebook.com/remotecontrolcat/?fref=ts"> R.C. Cat</a>. I work on my own music under the pseudonym <a href="http://www.julio.correa.me/sc">Secret Crane</a>.
     <br>
     <br>
-    <b>email:<b> <a href="mailto:julio.samuel.correa@gmail.com" target="_top">julio.samuel.correa@gmail.com</a>
+    <b>email:<b> <a href="mailto:alexander.cheng@utexas.edu" target="_top">alexander.cheng@utexas.edu</a>
     <br>
     <a href="Julio_Correa_Resume.pdf">resume</a>
   </div>
@@ -122,7 +122,7 @@
   <footer>
     Designed & Built using Sketch, HTML5, CSS3, and jQuery.
     <br>
-      &copy; 2016 by Julio Correa
+      &copy; 2016 by Alex Kuan Cheng
   </footer>
 </body>
 
