--- a/index.html
+++ b/index.html
@@ -26,16 +26,16 @@
         <img src="images/pikkl.png" width="200" height="200">
 
       <figcaption>
-        <h3> Pikkl </h3>
+        <h3> Stereoscopic VR Camera Rig </h3>
       </a>
 
-        <p>iOS / Design</p>
+        <p>Ash Scripts / CAD Design</p>
       </figcaption>
     </figure>
 
     <figure class="thumbnail">
       <a href="pomo/index.html">
-        <img src="images/pomo.png" width="200" height="200">
+        <img src="images/VR.jpg" width="200" height="200">
 
       <figcaption>
         <h3> Pomobox </h3>
