--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <figure class="thumbnail">
       <a href="pikkl/index.html">
-        <img src="images/pikkl.png" width="200" height="200">
+        <img src="images/VR.jpg" width="200" height="200">
 
       <figcaption>
         <h3> Stereoscopic VR Camera Rig </h3>
@@ -35,23 +35,23 @@
 
     <figure class="thumbnail">
       <a href="pomo/index.html">
-        <img src="images/VR.jpg" width="200" height="200">
+        <img src="images/JukeBox.png" width="200" height="200">
 
       <figcaption>
-        <h3> Pomobox </h3>
+        <h3> JukeBox </h3>
               </a>
 
-        <p>Arduino / Design </p>
+        <p>Android / WifiP2P </p>
       </figcaption>
     </figure>
 
     <figure class="thumbnail">
       <a href="clutch/index.html">
-        <img src="images/clutch.png" width="200" height="200">
+        <img src="images/Sweetify.png" width="200" height="200">
       <figcaption>
-        <h3> Clutch </h3>
+        <h3> Sweetify </h3>
         </a>
-        <p>iOS / Design</p>
+        <p>Web / Design</p>
       </figcaption>
 
     </figure>
