--- a/index.html
+++ b/index.html
@@ -58,33 +58,33 @@
 
     <figure class="thumbnail">
       <a href="vox/index.html">
-        <img src="images/vox.png" width="200" height="200">
+        <img src="images/Frogger.png" width="200" height="200">
       <figcaption>
-        <h3> Vox Study </h3>
+        <h3> VR Frogger </h3>
          </a>
-        <p>Design Research / UX</p>
+        <p>Unity Game Development</p>
       </figcaption>
 
     </figure>
 
     <figure class="thumbnail">
       <a href="corky/index.html">
-        <img src="images/corky.png" width="200" height="200">
+        <img src="images/SightStep.jpg" width="200" height="200">
       <figcaption>
-        <h3> Portable Corkscrew </h3>
+        <h3> SightStep for the Blind </h3>
           </a>
-        <p>Industrial Design</p>
+        <p>Arduino / Chip Design</p>
       </figcaption>
 
     </figure>
 
     <figure class="thumbnail">
       <a href="sc/index.html">
-        <img src="images/sc.png" width="200" height="200">
+        <img src="images/Car.jpg" width="200" height="200">
       <figcaption>
-        <h3> Visual Music Player </h3>
+        <h3> Collision Avoidance Car </h3>
          </a>
-        <p>Web / Design</p>
+        <p>Arduino / Ultrasound</p>
       </figcaption>
 
     </figure>
@@ -106,7 +106,7 @@
 
   <section id="about">
     <hr>
-    <img src="images/jc.jpg" width="200" height="200">
+    <img src="images/Alex.jpg" width="200" height="200">
     <div id="bio">
     I study <a href="https://www.utexas.edu/finearts/aah/academic/design/undergraduate/overview"> Design (BFA) </a> and <a href="http://www.cs.utexas.edu/undergraduate-program/about-us" > Computer Science (BSA) </a> at the University of Texas at Austin. I am interested in human-computer interaction. I play guitar in <a href="https://www.facebook.com/MicrophonicMusic/?fref=ts">Microphonic </a> and <a href="https://www.facebook.com/remotecontrolcat/?fref=ts"> R.C. Cat</a>. I work on my own music under the pseudonym <a href="http://www.julio.correa.me/sc">Secret Crane</a>.
     <br>
