--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
     <figure class="thumbnail">
       <a href="corky/index.html">
-        <img src="images/SightStep.jpg" width="200" height="200">
+        <img src="images/SightStep.JPG" width="200" height="200">
       <figcaption>
         <h3> SightStep for the Blind </h3>
           </a>
@@ -80,7 +80,7 @@
 
     <figure class="thumbnail">
       <a href="sc/index.html">
-        <img src="images/Car.jpg" width="200" height="200">
+        <img src="images/Car.JPG" width="200" height="200">
       <figcaption>
         <h3> Collision Avoidance Car </h3>
          </a>
@@ -108,7 +108,7 @@
     <hr>
     <img src="images/Alex.jpg" width="200" height="200">
     <div id="bio">
-    I study <a href="https://www.utexas.edu/finearts/aah/academic/design/undergraduate/overview"> Design (BFA) </a> and <a href="http://www.cs.utexas.edu/undergraduate-program/about-us" > Computer Science (BSA) </a> at the University of Texas at Austin. I am interested in human-computer interaction. I play guitar in <a href="https://www.facebook.com/MicrophonicMusic/?fref=ts">Microphonic </a> and <a href="https://www.facebook.com/remotecontrolcat/?fref=ts"> R.C. Cat</a>. I work on my own music under the pseudonym <a href="http://www.julio.correa.me/sc">Secret Crane</a>.
+    I study <a href="http://catalog.utexas.edu/undergraduate/business/degrees-and-programs/bachelor-of-business-administration/business-honors-program/"> Business Honors Program (BBA) </a>, <a href="http://www.cs.utexas.edu/undergraduate-program/about-us" > Computer Science (BS) </a>, and <a href="https://www.mccombs.utexas.edu/departments/marketing" > Marketing (BBA) </a> at the University of Texas at Austin. I am interested in virtual reality. I run the VR studio, <a href="http://studioforevr.com/">Studio ForeVR </a>. I volunteer my time and skills for <a href="http://www.stemedlabs.org/">STEMed Labs</a>.
     <br>
     <br>
     <b>email:<b> <a href="mailto:alexander.cheng@utexas.edu" target="_top">alexander.cheng@utexas.edu</a>
