--- a/index.html
+++ b/index.html
@@ -108,12 +108,12 @@
     <hr>
     <img src="images/Alex.jpg" width="200" height="200">
     <div id="bio">
-    I study <a href="http://catalog.utexas.edu/undergraduate/business/degrees-and-programs/bachelor-of-business-administration/business-honors-program/"> Business Honors Program (BBA) </a>, <a href="http://www.cs.utexas.edu/undergraduate-program/about-us" > Computer Science (BS) </a>, and <a href="https://www.mccombs.utexas.edu/departments/marketing" > Marketing (BBA) </a> at the University of Texas at Austin. I am interested in virtual reality. I run the VR studio, <a href="http://studioforevr.com/">Studio ForeVR</a>. I volunteer my time and skills for <a href="http://www.stemedlabs.org/">STEMed Labs</a>.
+    I study <a href="http://catalog.utexas.edu/undergraduate/business/degrees-and-programs/bachelor-of-business-administration/business-honors-program/"> Business Honors Program (BBA) </a>, <a href="http://www.cs.utexas.edu/undergraduate-program/about-us" > Computer Science (BS) </a>, and <a href="https://www.mccombs.utexas.edu/departments/marketing" > Marketing (BBA) </a> at the University of Texas at Austin. I am interested in virtual reality. I run the VR studio, <a href="http://studioforevr.com/">Studio ForeVR</a>. I also volunteer my time and skills for <a href="http://www.stemedlabs.org/">STEMed Labs</a>.
     <br>
     <br>
     <b>email:<b> <a href="mailto:alexander.cheng@utexas.edu" target="_top">alexander.cheng@utexas.edu</a>
     <br>
-    <a href="Julio_Correa_Resume.pdf">resume</a>
+    <a href="Alexander Kuan Cheng Resume Fall 2016.pdf">resume</a>
   </div>
 
   </section>
