--- a/pikkl/index.html
+++ b/pikkl/index.html
@@ -16,8 +16,8 @@
 <body>
 
 
-    <h1> <a href="../index.html"> Julio Correa </a> </h1>
-    <h2> Pikkl </h2>
+    <h1> <a href="../index.html"> Alex Kuan Cheng </a> </h1>
+    <h2> VR Camera Rig </h2>
 
     <section id="detail">
        
