--- a/pikkl/index.html
+++ b/pikkl/index.html
@@ -7,7 +7,7 @@
   <script src="//use.typekit.net/idz1anz.js"></script>
   <script src="script.js"> </script>
   <script>try{Typekit.load();}catch(e){}</script>
-  <title>Julio Correa</title>
+  <title>Alex Kuan Cheng</title>
   <link rel="stylesheet" href="../individual-style.css">
   <link href="/normalize.css" rel="stylesheet">
   <script src="prefixfree.min.js"></script>
