--- a/mad/index.html
+++ b/mad/index.html
@@ -7,7 +7,7 @@
   <script src="//use.typekit.net/idz1anz.js"></script>
   <script src="script.js"> </script>
   <script>try{Typekit.load();}catch(e){}</script>
-  <title>Julio Correa</title>
+  <title>Alex Kuan Cheng</title>
   <link rel="stylesheet" href="../individual-style.css">
   <link href="/normalize.css" rel="stylesheet">
   <script src="prefixfree.min.js"></script>
@@ -16,7 +16,7 @@
 <body>
 
 
-    <h1> <a href="../index.html"> Julio Correa </a> </h1>
+    <h1> <a href="../index.html">Alex Kuan Cheng</a> </h1>
     <h2> MAD App </h2>
 
     <section id="detail">
