update index with car

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     </figure>
 
     <figure class="thumbnail">
-      <a href="sc/index.html">
+      <a href="car/index.html">
         <img src="images/Car.JPG" width="200" height="200">
       <figcaption>
         <h3> Collision Avoidance Car </h3>
@@ -88,17 +88,6 @@
       </figcaption>
 
     </figure>
-    <!--
-      <figure class="thumbnail">
-      <a href="sc/index.html">
-        <img src="images/sc.png" width="200" height="200">
-      <figcaption>
-        <h3> Visual Music Player </h3>
-        Web / Design
-      </figcaption>
-       </a>
-    </figure>
-  -->
 
     </section>
 
