--- a/car/index.html
+++ b/car/index.html
@@ -30,6 +30,7 @@
         If there were no obstructions in front of the car, the collision avoidance system would move forward.
         <img src="car1.JPG">
         <img src="car2.JPG">
+        <img src="car3.JPG"
         <br>
         <br>
       </p>
