--- a/corky/index.html
+++ b/corky/index.html
@@ -16,20 +16,23 @@
 <body>
 
     <h1> <a href="../index.html">Alex Kuan Cheng</a> </h1>
-    <h2> Portable Corkscrew </h2>
+    <h2> SightStep for the Blind </h2>
 
     <section id="detail">
       <p>
-        This corkscrew was created for DES 309 with Kate Caterall, which I am currently enrolled in. This was the final step in a project to redesign a kitchen object (mine was a corkscrew)  I researched my object, I began to sketch new iterations of my object, I modeled my sketches using Plastacina. I finished by rendering my model with Rhino and printing in the Digital Fabrication Lab.
-        <img src="corky1.jpg">
-        <img src="corky2.jpg">
-        <h3> Plastalina Sketches </h3>
-        <img src="plastacina.jpg">
-        <h3> Pencil and Paper Sketches </h3>
-        <img src="sketches.png">
-        <br> 
-        <br> 
-        <!-- <object id="pdf" data="corky-3d.pdf" type="application/pdf" width="100%" height="100%"> 
+        I created this ultrasonic based device to replace the walking stick for visually impaired people. I used an Arduino to monitor 3 ultrasonic sensors and control the output of 3 vibration motors. The vibration motors would notify the user of the distance and direction of an obstruction. The vibration motors would be set to low vibration when an obstruction was within 100cm of the user. They would be set to high vibration when an obstruction was within 50cm of the user. Due to the placement of the ultrasonic sensors, the user was able to get a 160 degree "view" of where they were facing. With this project, I placed 5th in Texas State Science and Engineering Fair, as well as receiving many awards at the district and county level.
+        <img src="sideShoe.JPG">
+        <img src="frontShoe.JPG">
+        <h3> Diagram </h3>
+        <img src="Diagram.png">
+        <h3> Various Iterations </h3>
+        <img src="Iterations.png">
+        <h3> Use Diagram </h3>
+        <img src="pants.png">
+        <a href="scifair 10-11 stuff.pdf">resume</a>
+        <br>
+        <br>
+        <!-- <object id="pdf" data="corky-3d.pdf" type="application/pdf" width="100%" height="100%">
           <p>It appears you don't have a PDF plugin for this browser. No biggie... you can <a href="corky-3d.pdf">click here to download the PDF file.</a></p>
         </object> -->
       </p>
