--- a/corky/index.html
+++ b/corky/index.html
@@ -23,13 +23,13 @@
         I created this ultrasonic based device to replace the walking stick for visually impaired people. I used an Arduino to monitor 3 ultrasonic sensors and control the output of 3 vibration motors. The vibration motors would notify the user of the distance and direction of an obstruction. The vibration motors would be set to low vibration when an obstruction was within 100cm of the user. They would be set to high vibration when an obstruction was within 50cm of the user. Due to the placement of the ultrasonic sensors, the user was able to get a 160 degree "view" of where they were facing. With this project, I placed 5th in Texas State Science and Engineering Fair, as well as receiving many awards at the district and county level.
         <img src="sideShoe.JPG">
         <img src="frontShoe.JPG">
-        <h3> Diagram </h3>
+        <h2> Diagram </h2>
         <img src="Diagram.png">
-        <h3> Various Iterations </h3>
+        <h2> Various Iterations </h2>
         <img src="Iterations.png">
-        <h3> Use Diagram </h3>
+        <h2> Use Diagram </h2>
         <img src="pants.png">
-        <a href="scifair 10-11 stuff.pdf">resume</a>
+        <h2 href="scifair 10-11 stuff.pdf">PDF of the Project Specs</h2>
         <br>
         <br>
         <!-- <object id="pdf" data="corky-3d.pdf" type="application/pdf" width="100%" height="100%">
