--- a/corky/index.html
+++ b/corky/index.html
@@ -29,7 +29,7 @@
         <img src="Iterations.png">
         <h2> Use Diagram </h2>
         <img src="pants.png">
-        <h2 href="scifair 10-11 stuff.pdf">PDF of the Project Specs</h2>
+        <h2><a href="scifair 10-11 stuff.pdf">PDF of the Project Specs</a></h2>
         <br>
         <br>
         <!-- <object id="pdf" data="corky-3d.pdf" type="application/pdf" width="100%" height="100%">
