--- a/vox/index.html
+++ b/vox/index.html
@@ -16,23 +16,13 @@
 <body>
 
    <h1>  <a href="../index.html">Alex Kuan Cheng</a> </h1>
-   <h2> Vox Usability Study </h2>
+   <h2> VR Frogger </h2>
 
     <section id="detail">
       <p>
-        This was an assignment for my Interaction Design class in Fall 2015: 
-        The assignment was to do a usability analysis of the user interface of a product. This could be either an app or a website.   
-        <br><br>
-        I chose to do a usability analysis of the Vox site.  I began my analysis by researching general usability heuristics for websites. My work and research was heavily informed by information I found from the Nielson Norman Group's (NNG) site.  
-        <br><br>
-        For the study I had 6 test subjects. With these subjects I did 3 interviews and 3 cognitive walkthroughs, both of which were conducted according to the guidelines set out by NNG. This analysis of the site made me a more critical observer of how this site was designed and has informed my design process for user interfaces.   
-        <br><br>
-        I think that a combination of research and allowing design choices to be informed by user research can certainly create more effective and usable designs.
-        <br> 
-        <br> 
-        <object id="pdf" data="Design-Evaluation.pdf" type="application/pdf" width="100%" height="100%"> 
-          <p>It appears you don't have a PDF plugin for this browser. No biggie... you can <a href="Design-Evaluation.pdf">click here to download the PDF file.</a></p>
-        </object>         
+        I created this VR Cardboard game as part of a tutorial to learn how to code in Unity. I followed Ben Tristem's Unity tutorial on Udemy and then added my own personal touches, such as the camaros and rusted trucks. I also implemented a novel feature that allowed the player to jump forward in the game by jumping up and down in real life. In order to do this I had to monitor the phone's accelerometers to detect jump movements. This was my first VR project, and I really learned a lot about game design, UI, and VR interaction. I also learned about the interaction between Unity and Android for mobile gaming. I've since used what I've learned through this game to create more VR demos to explore novel methods for VR locomotion, as well as the potential for VR in various industries.
+        <img src="game.png">
+        <img src="app.png">
       </p>
     </section>
   </body>
