--- a/clutch/index.html
+++ b/clutch/index.html
@@ -17,18 +17,18 @@
 
 <section id="detail">
     <h1> <a href="../index.html"> Alex Kuan Cheng </a> </h1>
-    <h2> Clutch </h2>
+    <h2> Sweetify </h2>
 
       <p>
+        <a href="https://www.sweetify.me">Sweetify.me</a> is a Dynamic WebApp that my team created for Professor Downing's CS373 Software Engineering summer course. We built a music discovery website with a complete database, restful API, search bar, and spotify embedded web music players. Sweetify is meant to be a website where users can browse the top 100 songs of each year for the past 26 years, as well as the artists, albums, and genres associated with those songs. Our database consists of 4 models: Songs, Artists, Genres, and Years. We populated our database by scraping Wikipedia for the top songs per year and then scraping Spotify API to fill out the accompanying data for each of those songs.
 
-        Clutch is an iOS app I'm currently working on for a Mobile App Design class. It's available in the <a href="https://appsto.re/us/BSDDbb.i">app store</a>. There are four other students working on this project. Two computer science majors and two journlism majors. For this project I focused on user experience, ui design, and coding. The goal of this semester long project was to work on an interdisciplinary team that focused on marketing (social media), branding, and creating a succesful product. 
-        <br> 
-        <br> 
+        <br>
+        <br>
         <h3>Brainstorming and Research:</h3>
         We were given a week to come up with an app proposal for this class. We brainstormed many ideas but found that one of the pain points everyone on our team shared, was that we felt the available resources for tracking the buses in austin were not great. We researched available bus apps in austin and other cities to see how others had solved this problem. We also research the available resources from Capital Metro for getting real-time bus locations.
         <br>
         <h3>UI Sketches and early implementation:</h3>
-        We started by deciding on a feature set for our MVP. Once this set had been decided, we set goal for our first sprint, then began to work. We searched for a data source for route times. We began to work on how our data would be structued and how the app would display that data to users.  
+        We started by deciding on a feature set for our MVP. Once this set had been decided, we set goal for our first sprint, then began to work. We searched for a data source for route times. We began to work on how our data would be structued and how the app would display that data to users.
         <br>
         <h3>Iterate on UI while programming:</h3>
         <br>
@@ -40,7 +40,7 @@
         <h3>Launch and revisions:</h3>
 
 
-        <object id="pdf" data="Clutch.pdf" type="application/pdf" width="100%" height="100%"> 
+        <object id="pdf" data="Clutch.pdf" type="application/pdf" width="100%" height="100%">
           <p>It appears you don't have a PDF plugin for this browser. No biggie... you can <a href="Clutch.pdf">click here to download the PDF file.</a></p>
         </object>
       </p>
