--- a/clutch/index.html
+++ b/clutch/index.html
@@ -20,7 +20,7 @@
     <h2> Sweetify </h2>
 
       <p>
-        <a href="https://www.sweetify.me">Sweetify.me</a> is a Dynamic WebApp that my team created for Professor Downing's CS373 Software Engineering summer course. We built a music discovery website with a complete database, restful API, search bar, and spotify embedded web music players. Sweetify is meant to be a website where users can browse the top 100 songs of each year for the past 26 years, as well as the artists, albums, and genres associated with those songs. Our database consists of 4 models: Songs, Artists, Genres, and Years. We populated our database by scraping Wikipedia for the top songs per year and then scraping Spotify API to fill out the accompanying data for each of those songs.
+        <a href="sweetify.me">Sweetify.me</a> is a Dynamic WebApp that my team created for Professor Downing's CS373 Software Engineering summer course. We built a music discovery website with a complete database, restful API, search bar, and spotify embedded web music players. Sweetify is meant to be a website where users can browse the top 100 songs of each year for the past 26 years, as well as the artists, albums, and genres associated with those songs. Our database consists of 4 models: Songs, Artists, Genres, and Years. We populated our database by scraping Wikipedia for the top songs per year and then scraping Spotify API to fill out the accompanying data for each of those songs.
 
         <br>
         <br>
