--- a/clutch/index.html
+++ b/clutch/index.html
@@ -20,12 +20,25 @@
     <h2> Sweetify </h2>
 
       <p>
-        <a href="http://sweetify.me/">Sweetify.me</a> is a Dynamic WebApp that my team created for Professor Downing's CS373 Software Engineering summer course. We built a music discovery website with a complete database, restful API, search bar, and spotify embedded web music players. Sweetify is meant to be a website where users can browse the top 100 songs of each year for the past 26 years, as well as the artists, albums, and genres associated with those songs. Our database consists of 4 models: Songs, Artists, Genres, and Years. We populated our database by scraping Wikipedia for the top songs per year and then scraping Spotify API to fill out the accompanying data for each of those songs.
+        <a href="http://sweetify.me/">Sweetify.me</a> is a Dynamic WebApp that my team created for Professor Downing's CS373 Software Engineering summer course. We built a music discovery website with a complete database, restful API, search bar, and spotify embedded web music players. Sweetify is meant to be a website where users can browse the top 100 songs of each year for the past 26 years, as well as the artists, albums, and genres associated with those songs. Our database consists of 4 models: Songs, Artists, Genres, and Years. We populated our database by scraping Wikipedia for the top songs per year and then scraping Spotify API to fill out the accompanying data for each of those songs. We used NameCheap to acquire the domain name, and we used DigitalOcean to host our website.
+        <br>
+        <br>
+        <h3>Use Cases:</h3>
+        <h4>Songs</h4>
+        Let's say you just want to see the top list of songs, just click on the songs tab in the navigation bar and you will be directed to a page that lists out all of the songs with information about the artist, album, year, and more. You may just want to see a list of the top songs to discover, or maybe you are looking for a specific song to find the artist. Either way, we've got you covered.
+        <br>
 
-        <br>
-        <br>
-        <h3>Brainstorming and Research:</h3>
-        We were given a week to come up with an app proposal for this class. We brainstormed many ideas but found that one of the pain points everyone on our team shared, was that we felt the available resources for tracking the buses in austin were not great. We researched available bus apps in austin and other cities to see how others had solved this problem. We also research the available resources from Capital Metro for getting real-time bus locations.
+Artists
+
+So maybe you are the type who wants to listen to a bunch of songs by the same artist. No problem, just click on the artists tab in the navigation bar and you'll be presented with some of the top artists with their name, songs, image, and more. This way you can find your new favorite artist and maybe even go see them live in a concert some time!
+
+Genres
+
+Everyone has that favorite type of music. Click on the genres tab in the navigation bar and you'll see a list of genres. In the genres you'll see a name, description, list of artists, and more. You will be able to discover new artists from your favorite genre.
+
+Years
+
+Remember that school dance in high school when your favorite song was playing, but it's been so long you forgot the name of the song? Have no fear, search around on the years page to find years with some of the top songs from that year and relive the glory days!
         <br>
         <h3>UI Sketches and early implementation:</h3>
         We started by deciding on a feature set for our MVP. Once this set had been decided, we set goal for our first sprint, then began to work. We searched for a data source for route times. We began to work on how our data would be structued and how the app would display that data to users.
