--- a/clutch/index.html
+++ b/clutch/index.html
@@ -20,7 +20,7 @@
     <h2> Sweetify </h2>
 
       <p>
-        <a href="http://sweetify.me/">Sweetify.me</a> is a Dynamic WebApp that my team created for Professor Downing's CS373 Software Engineering summer course. We built a music discovery website with a complete database, restful API, search bar, and spotify embedded web music players. Sweetify is meant to be a website where users can browse the top 100 songs of each year for the past 26 years, as well as the artists, albums, and genres associated with those songs. Our database consists of 4 models: Songs, Artists, Genres, and Years. We populated our database by scraping Wikipedia for the top songs per year and then scraping Spotify API to fill out the accompanying data for each of those songs. We used NameCheap to acquire the domain name, and we used DigitalOcean to host our website.
+        <a href="http://sweetify.me/">Sweetify.me</a> is a Dynamic WebApp that my team of 5 created for Professor Downing's CS373 Software Engineering summer course. We built a music discovery website with a complete database, restful API, search bar, and spotify embedded web music players. Sweetify is meant to be a website where users can browse the top 100 songs of each year for the past 26 years, as well as the artists, albums, and genres associated with those songs. Our database consists of 4 models: Songs, Artists, Genres, and Years. We populated our database by scraping Wikipedia for the top songs per year and then scraping Spotify API and Last.fm API to fill out the accompanying data for each of those songs. We used NameCheap to acquire the domain name and DigitalOcean to host our website. We used Bootstrap and AngularJS for the front end, SQLAlchemy and PostgreSQL for the back end, and Apiary and Flask for the API. We also used SQLite to create and purge databases for unit testing. We met in person in the computer labs to build this website together and used Slack to communicate outside of the computer labs.
         <br>
         <h3>UML Diagram:</h3>
         <img src="UML.png">
@@ -37,6 +37,7 @@
         <br>
         <h3>Sample Page:</h3>
         <img src="Sample.png">
+        Here's the github for project: <a href="https://github.com/ailae/cs373-idb"> https://github.com/ailae/cs373-idb </a>
         </object>
       </p>
     </section>
