--- a/indeed/index.html
+++ b/indeed/index.html
@@ -5629,6 +5629,14 @@
                       <td>6.65</td>
                       <td>8</td>
                     </tr>
+                    <tr>
+                      <th scope="row">Total</th>
+                      <td>888</td>
+                      <td>60.59</td>
+                      <td>7</td>
+                      <td>6.24</td>
+                      <td>8</td>
+                    </tr>
                   </tbody>
                 </table>
             </div>
